force-app/main/default/objects/Dynamic_Pricing_Setting__c/Dynamic_Pricing_Setting__c.object-meta.xml
<CustomObject>
    <label>Dynamic Pricing Setting</label>
    <nameField>
        <label>Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dynamic Pricing Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>