force-app/main/default/objects/Dynamic_Pricing_Setting__c/fields/Base_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Base_Multiplier__c</fullName>
    <label>Base Multiplier</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>