force-app/main/default/objects/Dynamic_Pricing_Setting__c/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Created By (Custom)</relationshipLabel>
    <relationshipName>Created_By_User</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Lookup</type>
</CustomField>