force-app/main/default/objects/Dynamic_Pricing_Setting__c/fields/Setting_Type__c.field-meta.xml
<CustomField>
    <fullName>Setting_Type__c</fullName>
    <label>Setting Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>